--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
+<!-- This is where all the strings are. (e.g. "global variables") -->
 <resources>
     <string name="app_name">Ready2Walk</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="title_training">Training</string>
+    <string name="test">Test</string>
+    <string name="edit_message">Enter Message</string>
+    <string name="button_send">Click Me</string>
 </resources>
