--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,13 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="start">Start</string>
     <string name="stop">Stop</string>
+    <string name="user_name"> Bobby </string>
+    <string name="user_height"> 153 </string>
+    <string name="user_weight"> 65 </string>
+    <string name="user_info1"> Name: </string>
+    <string name="user_info2"> Height: </string>
+    <string name="user_info3"> Weight: </string>
+    <string name="user_unit2"> cm </string>
+    <string name="user_unit3"> kg </string>
 
 </resources>
