modified display of session data to match parent # Conflicts: #	app/src/main/res/layout/fragment_sampling.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,9 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="start">Start</string>
     <string name="stop">Stop</string>
+
+    <string name="Sessions">Sessions</string>
+
     <string name="user_name"> Bobby </string>
     <string name="user_height"> 153 </string>
     <string name="user_weight"> 65 </string>
